log
Wed 24 Apr 2024 07:20:49 PM UTC: 
 tests:  0|6
total_score: 0/70
ab9b396
Wed 24 Apr 2024 07:34:32 PM UTC: 
 hashmap.c | 37 +++++++++++++++++++++++++++++++------
 1 file changed, 31 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:19: error: ‘Pair’ has no member named ‘next’
   54 |     while (current->next != NULL)
      |                   ^~
hashmap.c:62:12: error: ‘Pair’ has no member named ‘next’
   62 |     current->next = createPair(key, value);
      |            ^~
Compilation failed
ddc3164
